quick-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-app
  labels:
    app: quick-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quick-app
  template:
    metadata:
      labels:
        app: quick-app
    spec:
      containers:
      - name: quick-app
        image: davidegalifi/quick-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quick-app-service
spec:
  selector:
    app: quick-app
  ports:
    - protocol: TCP
      port: 10002
      targetPort: 8080
